fixed overlapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
 @import "pages/new";
 @import "pages/dashboard";
 
-
+body {
+  padding-top: 8vh;
+}
 a:hover {
   text-decoration: none;
 }
